--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,37 +1,106 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salles Libres</title>
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const menuButton = document.getElementById('menu-button');
+            const menu = document.getElementById('menu');
 
+            menuButton.addEventListener('click', function () {
+                menu.classList.toggle('hidden');
+            });
+            document.addEventListener('click', function (event) {
+                if (!menu.contains(event.target) && !menuButton.contains(event.target)) {
+                    menu.classList.add('hidden');
+                }
+            });
+
+            const dateInput = document.getElementById('date');
+            const timeInput = document.getElementById('time');
+            const now = new Date();
+            const formattedDate = now.toISOString().split('T')[0];
+            const formattedTime = now.toTimeString().split(' ')[0].slice(0, 5);
+            dateInput.value = formattedDate;
+            timeInput.value = formattedTime;
+            const form = document.getElementById('dateTimeForm');
+            form.addEventListener('submit', function (event) {
+                const heureRegex = /([01]?[0-9]|2[0-3]):[0-5][0-9]/;
+                const dateRegex = /\d{4}-\d{2}-\d{2}/;
+
+                event.preventDefault();
+                const date = document.getElementById('date').value;
+                const time = document.getElementById('time').value;
+                window.location.href = `/salles?date=${date}&time=${time}`;
+            });
+        });
+    </script>
+</head>
 <body class="h-full bg-gray-100">
     <div class="min-h-full">
         <header class="bg-white shadow">
-            <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
-                <h1 class="text-3xl font-bold tracking-tight text-gray-900">Salles libres</h1>
+            <div class="mx-auto max-w-4xl px-4 py-6 sm:px-6 lg:px-8">
+                <h1 class="text-3xl font-bold tracking-tight text-gray-900">Ou puis-je travailler ?</h1>
             </div>
         </header>
         <main>
-            <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
-                <div class="container mx-auto">
-                    <table id="roomsTable" class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">
-                        <thead class="bg-gray-50">
+            <div class="mx-auto max-w-4xl px-4 py-6 sm:px-6 lg:px-8">
+                <div class="relative inline-block text-left w-full">
+                    <div class="grid grid-cols-5 gap-4">
+                        <div class="col-span-3 relative">
+                            <button type="button" class="inline-flex justify-center w-full rounded-md border border-gray-300 shadow-sm py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" id="menu-button" aria-expanded="true" aria-haspopup="true">
+                                Sélectionner Date et Heure
+                                <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                                </svg>
+                            </button>
+
+                            <div id="menu" class="absolute mt-2 w-full rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none hidden" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+                                <div class="py-1" role="none">
+                                    <form id="dateTimeForm" class="px-4 py-3" role="none">
+                                        <div class="mb-4">
+                                            <label for="date" class="block text-sm font-medium text-gray-700">Date</label>
+                                            <input type="date" id="date" name="date" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                                        </div>
+                                        <div class="mb-4">
+                                            <label for="time" class="block text-sm font-medium text-gray-700">Heure</label>
+                                            <input type="time" id="time" name="time" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                                        </div>
+                                        <div>
+                                            <button type="submit" id="searchButton" class="w-full inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Rechercher</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-span-2">
+                            <button type="button" class="inline-flex justify-center w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-indigo-600 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" onclick="window.location.href = `/salles`;">
+                                Heure actuelle
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Tableau des salles libres -->
+                <div class="container mx-auto mt-6 max-w-4xl">
+                    <h1 class="text-2xl font-bold mb-4">Salles Libres</h1>
+                    <table id="roomsTable" class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">  
+                        <thead class="bg-gray-50 shadow-sm">
                             <tr>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Salle</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Prochain cours</th>
+                                <th class="text-center px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Salle</th>
+                                <th class="text-center px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Prochain cours</th>
                             </tr>
-                        </thead>
+                        </thead>                      
                         <tbody class="bg-white divide-y divide-gray-200">
                             <% for (const room in freeRooms) { %>
                                 <tr>
-                                    <td class="px-4 py-4 whitespace-nowrap">
+                                    <td class="px-4 py-4 whitespace-nowrap text-center">
                                         <%= room %>
                                     </td>
-                                    <td class="px-4 py-4 whitespace-nowrap">
+                                    <td class="px-4 py-4 whitespace-nowrap text-center">
                                         <%= freeRooms[room].nextCourse ? new
                                             Date(toDate(freeRooms[room].nextCourse.dtstart)).toLocaleTimeString('fr-FR',
                                             { hour: '2-digit' , minute: '2-digit' , hour12: false })
@@ -42,22 +111,22 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="container mx-auto mt-8">
+                <div class="container mx-auto mt-8 max-w-4xl">
                     <h1 class="text-2xl font-bold mb-4">Salles Occupées</h1>
                     <table id="roomsTable" class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">
                         <thead class="bg-gray-50">
                             <tr>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Salle</th>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Sera Libre</th>
+                                <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Salle</th>
+                                <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Sera Libre</th>
                             </tr>
                         </thead>
                         <tbody class="bg-white divide-y divide-gray-200">
                             <% for (const room in usedRooms) { %>
                                 <tr>
-                                    <td class="px-4 py-4 whitespace-nowrap">
+                                    <td class="px-4 py-4 whitespace-nowrap text-center">
                                         <%= room %>
                                     </td>
-                                    <td class="px-4< py-4 whitespace-nowrap">
+                                    <td class="px-4< py-4 whitespace-nowrap text-center">
                                         <%= usedRooms[room].courses.willBeFree ? new
                                             Date(usedRooms[room].courses.willBeFree).toLocaleTimeString('fr-FR', {
                                             hour: '2-digit' , minute: '2-digit' , hour12: false })
@@ -68,33 +137,21 @@
                         </tbody>
                     </table>
                 </div>
+                <p class="mt-2 text-base text-gray-600 mt-6">
+                    <strong>Vous avez besoin d'une salle pour travailler ?</strong> <br>
+                    Utilisez cette page pour trouver des salles libres et savoir quand elles seront disponibles. <br>
+                    Sélectionnez une date et une heure pour voir les salles disponibles à ce moment-là.
+                </p>
             </div>
+            
         </main>
+        <footer class="bg-white shadow mt-8">
+            <div class="mx-auto max-w-4xl px-4 py-6 sm:px-6 lg:px-8">
+                <p class="text-center text-sm text-gray-500">
+                    &copy; 2024 tidic.fr/salles. Tous droits réservés.
+                </p>
+            </div>
+        </footer>
     </div>
-    <script>
-        sortByTime();
-        function sortByName() {
-            const table = document.getElementById('roomsTable');
-            const rows = Array.from(table.rows).slice(1);
-            rows.sort((a, b) => {
-                const nameA = a.cells[0].innerText.toLowerCase();
-                const nameB = b.cells[0].innerText.toLowerCase();
-                return nameA.localeCompare(nameB);
-            });
-            rows.forEach(row => table.appendChild(row));
-        }
-
-        function sortByTime() {
-            const table = document.getElementById('roomsTable');
-            const rows = Array.from(table.rows).slice(1);
-            rows.sort((a, b) => {
-                const timeA = a.cells[1].innerText === 'Aucun cours prévu' ? Infinity : new Date('1970-01-01T' + a.cells[1].innerText);
-                const timeB = b.cells[1].innerText === 'Aucun cours prévu' ? Infinity : new Date('1970-01-01T' + b.cells[1].innerText);
-                return timeA - timeB;
-            });
-            rows.forEach(row => table.appendChild(row));
-        }
-    </script>
 </body>
-
 </html>
