--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,6 +40,7 @@
         });
     </script>
 </head>
+
 <body class="h-full bg-gray-100">
     <div class="min-h-full">
         <header class="bg-white shadow">
@@ -51,49 +53,67 @@
                 <div class="relative inline-block text-left w-full">
                     <div class="grid grid-cols-5 gap-4">
                         <div class="col-span-3 relative">
-                            <button type="button" class="inline-flex justify-center w-full rounded-md border border-gray-300 shadow-sm py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" id="menu-button" aria-expanded="true" aria-haspopup="true">
+                            <button type="button"
+                                class="inline-flex justify-center w-full rounded-md border border-gray-300 shadow-sm py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                                id="menu-button" aria-expanded="true" aria-haspopup="true">
                                 Sélectionner Date et Heure
-                                <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                    <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                                <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                    fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd"
+                                        d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                        clip-rule="evenodd" />
                                 </svg>
                             </button>
 
-                            <div id="menu" class="absolute mt-2 w-full rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none hidden" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
+                            <div id="menu"
+                                class="absolute mt-2 w-full rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none hidden"
+                                role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
                                 <div class="py-1" role="none">
                                     <form id="dateTimeForm" class="px-4 py-3" role="none">
                                         <div class="mb-4">
-                                            <label for="date" class="block text-sm font-medium text-gray-700">Date</label>
-                                            <input type="date" id="date" name="date" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                                            <label for="date"
+                                                class="block text-sm font-medium text-gray-700">Date</label>
+                                            <input type="date" id="date" name="date"
+                                                class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
                                         </div>
                                         <div class="mb-4">
-                                            <label for="time" class="block text-sm font-medium text-gray-700">Heure</label>
-                                            <input type="time" id="time" name="time" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+                                            <label for="time"
+                                                class="block text-sm font-medium text-gray-700">Heure</label>
+                                            <input type="time" id="time" name="time"
+                                                class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
                                         </div>
                                         <div>
-                                            <button type="submit" id="searchButton" class="w-full inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Rechercher</button>
+                                            <button type="submit" id="searchButton"
+                                                class="w-full inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Rechercher</button>
                                         </div>
                                     </form>
                                 </div>
                             </div>
                         </div>
                         <div class="col-span-2">
-                            <button type="button" class="inline-flex justify-center w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-indigo-600 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" onclick="window.location.href = `/salles`;">
+                            <button type="button"
+                                class="inline-flex justify-center w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-indigo-600 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                                onclick="window.location.href = `/salles`;">
                                 Heure actuelle
                             </button>
                         </div>
                     </div>
                 </div>
-                
+
                 <!-- Tableau des salles libres -->
                 <div class="container mx-auto mt-6 max-w-4xl">
                     <h1 class="text-2xl font-bold mb-4">Salles Libres</h1>
-                    <table id="roomsTable" class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">  
+                    <table id="freeRoomsTable" class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">
                         <thead class="bg-gray-50 shadow-sm">
                             <tr>
-                                <th class="text-center px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Salle</th>
-                                <th class="text-center px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Prochain cours</th>
+                                <th
+                                    class="text-center px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Salle</th>
+                                <th
+                                    class="text-center px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Prochain cours</th>
                             </tr>
-                        </thead>                      
+                        </thead>
                         <tbody class="bg-white divide-y divide-gray-200">
                             <% for (const room in freeRooms) { %>
                                 <tr>
@@ -107,17 +127,19 @@
                                             : 'Aucun cours prévu' %>
                                     </td>
                                 </tr>
-                            <% } %>
+                                <% } %>
                         </tbody>
                     </table>
                 </div>
                 <div class="container mx-auto mt-8 max-w-4xl">
                     <h1 class="text-2xl font-bold mb-4">Salles Occupées</h1>
-                    <table id="roomsTable" class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">
+                    <table id="usedRoomsTable" class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">
                         <thead class="bg-gray-50">
                             <tr>
-                                <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Salle</th>
-                                <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Sera Libre</th>
+                                <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Salle
+                                </th>
+                                <th class="px-6 py-3 text-xs font-medium text-gray-500 uppercase tracking-wider">Sera
+                                    Libre</th>
                             </tr>
                         </thead>
                         <tbody class="bg-white divide-y divide-gray-200">
@@ -133,7 +155,7 @@
                                             : 'Aucune information' %>
                                     </td>
                                 </tr>
-                            <% } %>
+                                <% } %>
                         </tbody>
                     </table>
                 </div>
@@ -143,7 +165,7 @@
                     Sélectionnez une date et une heure pour voir les salles disponibles à ce moment-là.
                 </p>
             </div>
-            
+
         </main>
         <footer class="bg-white shadow mt-8">
             <div class="mx-auto max-w-4xl px-4 py-6 sm:px-6 lg:px-8">
@@ -153,5 +175,37 @@
             </div>
         </footer>
     </div>
+    <script>
+        sortByTime();
+        sortByTimeDescending();
+
+        function sortByTime() {
+            const table = document.getElementById('usedRoomsTable').getElementsByTagName('tbody')[0];
+            const rows = Array.from(table.rows);
+            rows.sort((a, b) => {
+                const timeA = a.cells[1].innerText === 'Aucun cours prévu' ? '24:00' : a.cells[1].innerText;
+                const timeB = b.cells[1].innerText === 'Aucun cours prévu' ? '24:00' : b.cells[1].innerText;
+                return timeA.localeCompare(timeB);
+            });
+
+            rows.forEach(row => table.appendChild(row));
+        }
+        function sortByTimeDescending() {
+            const table = document.getElementById('freeRoomsTable').getElementsByTagName('tbody')[0];
+            const rows = Array.from(table.rows);
+
+            rows.sort((a, b) => {
+                const timeA = a.cells[1].innerText === 'Aucun cours prévu' ? '24:00' : a.cells[1].innerText;
+                const timeB = b.cells[1].innerText === 'Aucun cours prévu' ? '24:00' : b.cells[1].innerText;
+
+                const dateA = new Date(`1970-01-01T${timeA}:00`);
+                const dateB = new Date(`1970-01-01T${timeB}:00`);
+
+                return dateB - dateA;
+            });
+            rows.forEach(row => table.appendChild(row));
+        }
+    </script>
 </body>
+
 </html>
