--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -12,10 +12,16 @@
 
 <body class="h-full bg-gray-100">
     <div class="min-h-full">
-        <header class="bg-white shadow">
-            <div class="mx-auto max-w-4xl px-4 py-6 sm:px-6 lg:px-8">
+        <header class="bg-white shadow flex items-center sm:px-6 lg:px-8">
+            <div class="basis-1/2 mx-auto max-w-4xl px-4 py-6 sm:px-6 lg:px-8">
                 <h1 class="text-3xl font-bold tracking-tight text-gray-900">Administration de tidic.fr/salles</h1>
             </div>
+            <div>
+                <a href="/salles/logout" class="inline-flex justify-center w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-indigo-600 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                    Déconnexion
+                </a>
+            </div>
+            
         </header>
         <main>
             <div class="mx-auto max-w-4xl px-4 py-6 sm:px-6 lg:px-8">
