--- a/views/index.ejs
+++ b/views/index.ejs
@@ -159,6 +159,17 @@
                         </tbody>
                     </table>
                 </div>
+                <% if (Object.keys(invalidRooms).length > 0) { %>
+                <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-4" role="alert">
+                    <strong class="font-bold">Erreur:</strong>
+                    <span class="block sm:inline">Les salles suivantes ont des liens invalides:</span>
+                    <ul class="list-disc list-inside">
+                        <% for (const room in invalidRooms) { %>
+                            <li><%= room %></li>
+                        <% } %>
+                    </ul>
+                </div>
+                <% } %>
                 <p class="mt-2 text-base text-gray-600 mt-6">
                     <strong>Vous avez besoin d'une salle pour travailler ?</strong> <br>
                     Utilisez cette page pour trouver des salles libres et savoir quand elles seront disponibles. <br>
