--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <link href="/salles/public/style.css" rel="stylesheet" />
 </head>
 <body class="h-full bg-gray-100">
     <div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
