--- a/views/index.ejs
+++ b/views/index.ejs
@@ -254,6 +254,13 @@
                             <br>
                             Sélectionnez une date et une heure pour voir les salles disponibles à ce moment-là.
                         </p>
+                        <p class="mt-2 text-base text-gray-600 mt-6">
+                            <!-- Indiquer que si on veut me contacter, on peut a l'adresse contact@tidic.fr ou tidic sur discord -->
+                            <strong>Il manque une salle ? Une salle ne devrait pas être dans la liste ?</strong> <br>
+                            Ou simplement, si vous avez des suggestions ou des remarques, <br>
+                            Contactez-moi à l'adresse <strong><a href="mailto:contact@tidic.fr">contact@tidic.fr</a></strong> ou sur Discord : <strong>tidic</strong>
+                            
+                        </p>
             </div>
 
         </main>
